# finTest2

./: README.md
caffer/: netbuilder.py  test.prototxt  train.prototxt
caffer/classifer/: tags
caffer/dmaker/: DayMaker.py  DayMakerAERL.py  DayMakerAERLMulti.py  DayMakerMerge.py  DayMakerPer.py  DayMakerTrans2Mongo.py  DayWalkMaker.py  ForexMakerSingle.py  ForexMakerSingleNpy.py  ForexMakerSingleXper.py  OneDayMaker.py  OneDayMakerRT.py  tags
caffer/lib/: CaffeFeature.py  CaffeTrainerCmd.py  CaffeTrainerPython.py  NetBuilder.py
caffer/pytrain_test/: Net.py  nn_sauron.prototxt  nn_sauron_train.prototxt  solver.prototxt  trainer.py
caffer/rec/: TrainerCmdTest.py  solver.prototxt  solver.template  test.txt  train.txt  train_val.prototxt
caffer/rectest/: AutoAtt.py  Tester.py  TrainerCmdTest.py  solver.prototxt  solver.template  train_val.prototxt  train_val.prototxt.bak
caffer/test/: TrainerCmdTest.py  solver.prototxt  solver.template  test.txt  train.txt  train_val.prototxt
sauron/: RecNet.py  TrainerCmdTest.py  TrainerTest.py  deep_test.py  deep_test_cacd.py  deep_test_tfdp.py  main.py  solver.prototxt  solver.template  test.prototxt  to_gray.py
sauron/Trainer/: Data.py  DatasetTrainVal.py  DeepData.py  Temp.py  buildnet.py  config.py  db_show.py  kill.py  main.py  status.py
sauron/cmodel/featurebr/: .main.cpp.swp  CMakeLists.txt  main.cpp
sauron/controller/: __init__.py
sauron/env-config/: config.sh
sauron/lib/: CaffeTrainerCmd.py
sauron/libbak/: Util.py  __init__.py
sauron/model/: .Detecter.py.swp  .FaceResizer.py.swp  .ImgDownloader.py.swp  (+23 more)
(+312 files in other folders)
